# viper

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Sources.cmake
_build/: viper
cli/: CMakeLists.txt  main.c
examples/: controlflow.va  helloworld.va
include/viper/: asm.h  bc.h  builder.h  common.h  context.h  emit.h  emitter.h  func.h  linker.h  loader.h  nest.h  obj.h  runtime.h  state.h  util.h  verify.h  viper.h
include/viper/vp/: asm.h  core.h  emitter.h  loader.h  runtime.h
src/: Makefile  api.c  func.c  linker.c  main.c  nest.c  obj.c  state.c
src/asm/: asm.c  asm.h  lexer.c  lexer.h  parser.c  parser.h  token.c  token.h  util.c  util.h
src/builder/: bind.c  build.c  builder.c  emit.c  verify.c
src/cli/: asm.h  main.c
src/core/: api.c  bc.c  core.h  func.c  func.h  linker.c  nest.c  nest.h  obj.c  obj.h
src/emit/: build.c  emit.c
src/include/viper/: asm.h  bc.h  builder.h  common.h  core.h  loader.h  util.h  viper.h  vm.h
src/include/viper/core/: func.h  linker.h  nest.h  obj.h
src/include/viper/vm/: state.h
src/loader/: loader.c  loader.h  writer.c
src/runtime/: call.c  runtime.c  runtime.h  state.h  vm.c  vm.h
src/util/: dbuff.c  mem.c
src/vm/: state.c  vm.c
vp/: CMakeLists.txt  code.c  code.h  common.h  core.c  core.h  ld-def.h  loader.c  loader.h  runtime.h  viper.c  viper.h
vp-emit/: CMakeLists.txt  build.h  emit.c  emit.h  vp.c  vp.h
vp/rt/: common.h  file.c  file.h  mem.c  mem.h  state.c  state.h
vp/rt/vm/: vm.c  vm.h
